tests/syntax_error/mismatched_close_brace.jou
def foo(} -> void:   # Error: '}' without a matching '{'
